# UPS_paper

CP_ICP_ICINCO18-main/: CMakeLists.txt  README.md  cpicp.cpp
FPFH_OPRANSAC_PCL-master/: CMakeLists.txt  fpfh.cpp  object_templates.txt  validationlib.h
Generalized_ICP_PCL-master/: CMakeLists.txt  README.md  gicp.cpp  validationlib.h
Go_ICP_2016_code-master/: Makefile  README.md  jly_main.cpp
ICP_Pt2Plane_PCL-master/: CMakeLists.txt  README.md  icp_p2pl.cpp  validationlib.h
ICP_Pt2Pt_PCL-master/: CMakeLists.txt  README.md  icp_P2PT.cpp  validationlib.h
NDT_3D_PCL-master/: CMakeLists.txt  README.md  ndt.cpp  validationlib.h
Origin_4PCS_PCL-main/: 4pcs_test.cpp  CMakeLists.txt
UPS_executable-main/: README.md  execute_UPS_cfA  execute_UPS_cfB  execute_poly
